@@ -1,6 +1,11 @@
 master
 ------
 
+	* Added CURLOPT_POSTREDIR option and CURL_REDIR_POST_301,
+	  CURL_REDIR_POST_302, CURL_REDIR_POST_303 and CURL_REDIR_POST_ALL
+	  constants. CURL_REDIR_POST_303 requires libcurl 7.26.0 or higher,
+	  all others require libcurl 7.19.1 or higher.
+
 	* PycURL now supports Python 3.1 through 3.3. Python 3.0 might
 	  work but it appears to ship with broken distutils, making virtualenv
 	  not function on it.
